<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:stretchColumns="1"
>
    <TableRow>
        <TextView android:text="@string/brand_label" />
        <EditText android:id="@+id/brand_text"
                  android:singleLine="true"
                  android:capitalize="words"
                  android:hint="@string/brand_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/year_label" />
        <EditText android:id="@+id/year_text"
                  android:singleLine="true"
                  android:numeric="integer"
                  android:hint="@string/year_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/number_label" />
        <EditText android:id="@+id/number_text"
                  android:singleLine="true"
                  android:numeric="integer"
                  android:hint="@string/number_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/value_label" />
        <EditText android:id="@+id/value_text"
                  android:singleLine="true"
                  android:numeric="decimal"
                  android:hint="@string/value_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/count_label" />
        <EditText android:id="@+id/count_text"
                  android:singleLine="true"
                  android:numeric="integer"
                  android:hint="@string/count_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/player_name_label" />
        <EditText android:id="@+id/player_name_text"
                  android:singleLine="true"
                  android:capitalize="words"
                  android:hint="@string/player_name_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/player_position_label" />
        <EditText android:id="@+id/player_position_text"
                  android:singleLine="true"
                  android:capitalize="words"
                  android:hint="@string/player_position_hint"
        />
    </TableRow>
    <Button android:id="@+id/save_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
    />
</TableLayout>
