<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
>
    <TextView     
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Filter By..." 
    />
    <RadioGroup android:id="@+id/filter_by_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
    >
        <RadioButton android:id="@+id/year_radio_button"
                     android:text="@string/year_radio_button"
        />
        <RadioButton android:id="@+id/number_radio_button"
                     android:text="@string/number_radio_button"
        />
        <RadioButton android:id="@+id/year_and_number_radio_button"
                     android:text="@string/year_and_number_radio_button"
        />
        <RadioButton android:id="@+id/player_name_radio_button"
                     android:text="@string/player_name_radio_button"
        />
    </RadioGroup>
    <Button android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="OK"
    />
    <Button android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
    />
</LinearLayout>
